fraud-verifier/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fraud-verifier
spec:
  hosts:
    - fraud-verifier
  http:
  - route:
    - destination:
        host: fraud-verifier
        port:
          number: 8080
    timeout: 500ms
    retries:
      attempts: 2
      retryOn: 5xx
      perTryTimeout: 200ms
